js filename change

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="lib/d3.v6.min.js"></script>
 </head>
 <body>
-<script src="js/Casette.js"></script>
+<script src="js/Houses.js"></script>
 </body>
 </html>
